Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-24277

TAP not supported message for existing SG deployments

    XMLWordPrintable

Details

    • KV Spock Code Freeze

    Description

      Need a way for the server to communicate to existing SG instances that TAP is not supported so that SG can exit gracefully and not wait for session termination.

      Attachments

        For Gerrit Dashboard: MB-24277
        # Subject Branch Project Status CR V

        Activity

          People

            sachin.smotra Sachin Smotra (Inactive)
            sachin.smotra Sachin Smotra (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty