MB-24277: If Tap Commands are requested we return NOT_SUPPORTED

As TAP is now is no longer supported if any of the following
Tap commands a called:

PROTOCOL_BINARY_CMD_TAP_CONNECT
PROTOCOL_BINARY_CMD_TAP_MUTATION
PROTOCOL_BINARY_CMD_TAP_DELETE
PROTOCOL_BINARY_CMD_TAP_FLUSH
PROTOCOL_BINARY_CMD_TAP_OPAQUE
PROTOCOL_BINARY_CMD_TAP_VBUCKET_SET
PROTOCOL_BINARY_CMD_TAP_CHECKPOINT_START
PROTOCOL_BINARY_CMD_TAP_CHECKPOINT_END

The server will now return PROTOCOL_BINARY_RESPONSE_NOT_SUPPORTED.

Change-Id: I0a54d06cac42c200391050131a1ab20cbc796fec
Reviewed-on: http://review.couchbase.org/81488
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>